--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "html-pdf": "^2.2.0",
+    "pdf-lib": "^1.11.2",
+    "pdfkit": "^0.11.0",
     "qrcode": "^1.4.4"
   }
 }
