--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "html-pdf": "^2.2.0",
     "pdf-lib": "^1.11.2",
     "pdfkit": "^0.11.0",
