--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "htmlPdf",
+  "name": "htmlpdf",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dependencies": "0.0.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "html-pdf": "^2.2.0",
     "pdf-lib": "^1.11.2",
